--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
         <div class="image">
-                <img src="/assets/myimage.png" alt="image">
+                <img src="/assets/image.png" alt="image">
             
         </div>
         <div class="email">
