--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
         <div class="image">
-                <img src="/assets/me.png" alt="image">
+                <img src="https://i.postimg.cc/wMKqKY1q/myimage.png" alt="image">
             
         </div>
         <div class="email">
