--- a/profile.html
+++ b/profile.html
@@ -93,7 +93,7 @@
             <a href="profile.html"><i class='bx bxs-user' id="active"></i></a>
             <a href="projects.html"><i class='bx bxs-folder-open'></i></a>
             <a href="experience.html"><i class='bx bxs-briefcase' ></i></a>
-            <a href=""><i class='bx bx-exit' ></i></a>
+            <a href="https://docs.google.com/document/d/1ggiNd8DapeibOmGNSs6HLlZvSg71ctZN/edit?usp=sharing&ouid=117704346372005172527&rtpof=true&sd=true"><i class='bx bxs-cloud-download' ></i></a>
         </div>
     </footer>
 </body>
