--- a/projects.html
+++ b/projects.html
@@ -110,7 +110,7 @@
             <a href="profile.html"><i class='bx bxs-user' ></i></a>
             <a href="projects.html"><i class='bx bxs-folder-open' id="active"></i></a>
             <a href="experience.html"><i class='bx bxs-briefcase' ></i></a>
-            <a href=""><i class='bx bx-exit' ></i></a>
+            <a href=""><i class='bx bxs-cloud-download' ></i></a>
         </div>
     </footer>
 </body>
